# marketo-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
marketo-mcp/.github/: copilot-instructions.md
marketo-mcp/src/marketo_mcp/: __init__.py  server.py
marketo-mcp/tests/: test_server.py
